--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -1,17 +1,41 @@
-<%= form_for(@registration) do |f| %>
-  <% if @registration.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@registration.errors.count, "error") %> prohibited this registration from being saved:</h2>
+<div class="registrations">
+  <%= form_for(@registration) do |f| %>
+      <% if @registration.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@registration.errors.count, "error") %> prohibited this registration from being saved:</h2>
 
-      <ul>
-      <% @registration.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+            <ul>
+              <% @registration.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+      <div class="row">
+        <div class="col-md-3">
+          <b>Name</b>
+        </div>
+        <div class="col-md-9">
+          <input class="form-control" placeholder="Ernest Jenkins">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <b>Affiliated University</b>
+        </div>
+        <div class="col-md-9">
+          <input class="form-control" placeholder="University of Worcester">
+        </div>
+      </div>
+
+      <%= f.hidden_field :content %>
+
+      <br />
+      <br />
+      <div class="actions">
+        <%= f.submit 'Register!'%>
+      </div>
+  <% end %>
+</div>
