--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,4 +1,38 @@
-<p id="notice"><%= notice %></p>
+<div class="registrations">
+  <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_registration_path(@registration) %> |
-<%= link_to 'Back', registrations_path %>
+  <div class="row">
+    <div class="col-md-4">
+      <b>Name</b>
+    </div>
+    <div class="col-md-8">
+      <%= @registration.name %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <b>Affiliation</b>
+    </div>
+    <div class="col-md-8">
+      <%= @registration.affiliation %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <b>Created At</b>
+    </div>
+    <div class="col-md-8">
+      <%= @registration.created_at %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <b>Updated At</b>
+    </div>
+    <div class="col-md-8">
+      <%= @registration.updated_at %>
+    </div>
+  </div>
+
+  <%= link_to 'Edit', edit_registration_path(@registration) %>
+</div>
