Alternate method of trying to get images to be displayed properly

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,4 +1,4 @@
-<% @featured_image = 'mars-one-colony' %>
+<% @featured_image = 'mars-one-colony.jpg' %>
 
 <header class="entry-header">
   <h1 class="entry-title">Home</h1>
