--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,4 +1,4 @@
-<% @featured_image = 'mars-one-colony-astronauts' %>
+<% @featured_image = 'mars-one-colony-astronauts.jpg' %>
 
 <header class="entry-header">
   <h1 class="entry-title">About</h1>
