--- a/app/views/static/speakers.html.erb
+++ b/app/views/static/speakers.html.erb
@@ -1,4 +1,4 @@
-<% @featured_image = 'mars_colony' %>
+<% @featured_image = 'mars_colony.jpg' %>
 
 <header class="entry-header">
   <h1 class="entry-title">Speakers</h1>
