Updated the name and added user routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="profile" href="http://gmpg.org/xfn/11">
-  <title>Space At Stanford – Colonization and the Next Frontier</title>
+  <title>Stanford Space Forum – Colonization and the Next Frontier</title>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -19,7 +19,7 @@
 <div id="page" class="hfeed site">
   <header id="masthead" class="site-header" role="banner">
     <div class="site-branding">
-      <h1 class="site-title"><a href="/" title="Space At Stanford" rel="home">Space At Stanford</a></h1>
+      <h1 class="site-title"><a href="/" title="Stanford Space Forum" rel="home">Stanford Space Forum</a></h1>
       <h2 class="site-description">Colonization and the Next Frontier</h2>
     </div><!-- .site-branding -->
 
