--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,12 @@
           <%= menu_item 'Registration', new_registration_path, 'page-item-16' %>
           <%= menu_item 'Schedule', schedule_path, 'page-item-18' %>
           <%= menu_item 'Speakers', speakers_path, 'page-item-20' %>
+          <% if is_logged_in? %>
+              <%= menu_item 'Sign out', '/signout', 'page-item-22' %>
+              <% if is_admin? %>
+                  <%= menu_item 'Admin', admin_path, 'page-item-24' %>
+              <% end %>
+          <% end %>
         </ul>
       </div>
     </nav><!-- #site-navigation -->
