--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -35,4 +35,7 @@
   </div>
 
   <%= link_to 'Edit', edit_registration_path(@registration) %>
+  <% if is_admin? %>
+      | <%= link_to 'Back', registrations_path %>
+  <% end %>
 </div>
